--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   "dependencies": {
     "body-parser": "1.9.2",
     "express": "4.10.1",
-    "mongoskin": "1.4.4",
+    "mongoose": "^4.1.3",
     "morgan": "1.5.0"
   },
   "devDependencies": {
     "expect.js": "0.3.1",
     "mocha": "2.0.1",
-    "superagent": "0.20.0"
+    "supertest": "^1.0.1"
   }
 }
